--- a/wallet/res/values/strings.xml
+++ b/wallet/res/values/strings.xml
@@ -283,7 +283,7 @@ students for their performance in the tutor-web learning environment. The
 tutor-web is a freely accessible educational tool with free educational
 material and a built-in drilling system.
 	</string>
-	<string name="spend_url">More information at <a href="https://c-cex.com/?p=smly-btc">c-cex.com</a></string>
+	<string name="spend_url">More information at <a href="http://tutor-web.info/smileycoin/smly-uses">tutor-web.info</a></string>
 	<string name="about_smly_url"><a href="http://tutor-web.info/information">Click here</a> if you wish to learn more about the Tutor Web Project and <a href="http://tutor-web.info/smileycoin">here</a> to learn more about smileycoin.</string>
 	<string name="prepare_payment_title">Smileycoin Games Payment</string>
 
