--- a/wallet/res/values/strings.xml
+++ b/wallet/res/values/strings.xml
@@ -286,5 +286,8 @@ material and a built-in drilling system.
 	<string name="spend_url">More information at <a href="http://tutor-web.info/smileycoin/smly-uses">tutor-web.info</a></string>
 	<string name="about_smly_url"><a href="http://tutor-web.info/information">Click here</a> if you wish to learn more about the Tutor Web Project and <a href="http://tutor-web.info/smileycoin">here</a> to learn more about smileycoin.</string>
 	<string name="prepare_payment_title">Smileycoin Games Payment</string>
+	<string name="mymessages_activity_title">My Messages</string>
+	<string name="sendmessage_activity_title">Send Message</string>
+	<string name="viewmessage_activity_title">Message</string>
 
 </resources>
